# Security

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: correction.cpp  correction.h  decode.cpp  decode.h  encode.cpp  encode.h
